# mandelbrot-perf

./: .gitignore  README.md  meson.build  shared.c
basic/: mandelbrot_basic.c
cuda/: mandelbrot_cuda.cu
include/: shared.h
subprojects/: ymir.wrap
